--- a/html/tableau.html
+++ b/html/tableau.html
@@ -15,6 +15,7 @@
 
  
     <!-- Header -->
+    <div class="tableau">
     <body class="background">
         <div class="header">
             <div class="navigation">
@@ -172,7 +173,7 @@
                 scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
                 vizElement.parentNode.insertBefore(scriptElement, vizElement);                
             </script>
-        
+        </div>
         <h3>
           This graphic shows California's forecasted office supply profits.  
         </h3>
