--- a/html/tableau.html
+++ b/html/tableau.html
@@ -15,7 +15,65 @@
 
  
     <!-- Header -->
-    <div class='tableauPlaceholder' id='viz1639796563646' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='ProfitsbyState_16397564170170&#47;ProfitsbyState' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1639796563646');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    <body class="background">
+        <div class="header">
+            <div class="navigation">
+                <div class="nav-color">
+                    <button class="button">
+                        <a href="../index.html" style="text-decoration: none">Home</a>
+                    </button>
+                    |
+                    <button class="button">
+                        <a href="aboutme.html" style="text-decoration: none">About Me</a>
+                    </button>
+                    |
+                    <button class="button">
+                    <a href="tableau.html" style="text-decoration: none"> Tableau</a>
+                    </button>
+                </div>
+                <br>
+            </div> 
+                <h1>Tableau</h1>
+                <a href="https://www.tableau.com/" style="color:white" style="text-decoration: none">Tableau Homepage</a>
+        </div>
+        <p>
+
+            <!-- Tableau Graph 1-->
+        <div class="tableau">
+            <div class='tableauPlaceholder' 
+                    id='viz1639756430558' 
+                    style='position: relative'>
+            <noscript><a href='#'>
+                <img alt='Profits by State ' 
+                src='RF&#47;RF2PGND8P&#47;1_rss.png' 
+                style='border: none' />
+            </a>
+        </noscript>
+        <object class='tableauViz'  
+            style='display:none;'>
+            <param name='host_url' 
+            value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+            <param name='embed_code_version' value='3' /> 
+            <param name='path' value='shared&#47;RF2PGND8P' /> 
+            <param name='toolbar' value='yes' />
+            <param name='static_image' 
+            value='RF&#47;RF2PGND8P&#47;1.png' /> 
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='language' value='en-US' />
+        </object>
+        </div>                
+        <script type='text/javascript'>                    
+            var divElement = document.getElementById('viz1639756430558');  
+            var vizElement = divElement.getElementsByTagName('object')[0];                    
+            vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    
+            var scriptElement = document.createElement('script');                    
+            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+        </script>
             <h3>
                 This graphic shows the profits in each state. Of all the states, California has the highest profits.
             </h3>
@@ -115,9 +173,13 @@
                 scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
                 vizElement.parentNode.insertBefore(scriptElement, vizElement);                
             </script>
+        </div>    
+        
         <h3>
           This graphic shows California's forecasted office supply profits.  
         </h3>
+
+        </p>
 
     </body>
 
