--- a/html/tableau.html
+++ b/html/tableau.html
@@ -28,7 +28,7 @@
                     </button>
                     |
                     <button class="button">
-                    <a href="tableau.html" style="text-decoration: none"> Tableau</a>
+                    <a href="https://colerh.github.io/IS201/html/tableau.html" style="text-decoration: none"> Tableau</a>
                     </button>
                 </div>
                 <br>
