--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href=".//html/aboutme.html">About Me</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href=".//html/tableau.html">Tableu</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="https://colerh.github.io/IS201/html/tableau.html">Tableu</a></li>
 
                     </ul>
                 </div>
